--- a/src/app/pages/details/phone-view/author-list/author-list-polish.html
+++ b/src/app/pages/details/phone-view/author-list/author-list-polish.html
@@ -1,13 +1,13 @@
 <template args="model">
     <if condition="model.allSenior.length || model.allNonsenior.length">
         <if condition="model.allSenior.length">
-            <h4>Senior Contributing Authors</h4>
+            <h4>Główni autorzy</h4>
             <div each="author in model.allSenior">
                 {author.name}<if condition="author.university">, {author.university}</if>
             </div>
         </if>
         <if condition="model.allNonsenior.length">
-            <h4>Contributing Authors</h4>
+            <h4>Autorzy współpracujący</h4>
             <div each="author in model.allNonsenior">
                 {author.name}<if condition="author.university">, {author.university}</if>
             </div>
