Fix button layout in errata form

--- a/src/app/pages/errata/form/form.scss
+++ b/src/app/pages/errata/form/form.scss
@@ -75,6 +75,10 @@
         }
     }
 
+    .button-row {
+        @include tight-row();
+    }
+
     .file-button {
         display: flex;
         justify-content: flex-start;
