desktop layout done

--- a/src/app/components/headline-paginator/headline-paginator.html
+++ b/src/app/components/headline-paginator/headline-paginator.html
@@ -1,6 +1,10 @@
 <template args="model">
-    <div class="headlines">
-    </div>
+    <div
+     each="c in model.contents"
+     class="headline-container"
+     hidden="{model.hidden($item)}"
+     skip="true"
+    ></div>
     <div class="nav-buttons">
         <div role="{model.newerRole}"><span class="fa fa-caret-left"></span>Newer</div>
         <div role="{model.olderRole}">Older<span class="fa fa-caret-right"></span></div>
