--- a/src/app/components/more-fewer/more-fewer.scss
+++ b/src/app/components/more-fewer/more-fewer.scss
@@ -7,4 +7,10 @@
     [role="button"] {
         cursor: pointer;
     }
+
+    .more:not([hidden]),
+    .fewer:not([hidden]) {
+        display: grid;
+        grid-gap: 4rem;
+    }
 }
