--- a/src/app/pages/press/press-excerpt/press-excerpt.html
+++ b/src/app/pages/press/press-excerpt/press-excerpt.html
@@ -1,18 +1,20 @@
 <template args="model">
     <img if="model.iconUrl" src="{model.iconUrl}">
     <div class="byline">
-        {model.author}, {model.org} | {model.date}
+        <if condition="model.source">
+            <span class="source">{model.source}</span> -
+        <else>
+            {model.author}, {model.org} |
+        </if>
+        {' '}{model.date}
     </div>
     <div class="headline">
-        <if condition="model.externalLink">
-            <a href="{model.externalLink}">{model.headline}
-                <span class="fa fa-external-link-alt"></span>
-            </a>
-        <else>
-            {model.headline}
-        </if>
+        <a href="{model.url}">{model.headline}
+            <span if="model.source" class="fa fa-external-link-alt"></span>
+        </a>
     </div>
     <div if="model.excerpt" class="excerpt">
         {model.excerpt}…
+        <a href="{model.url}">Continue reading</a>
     </div>
 </template>
