--- a/src/app/pages/faq/faq.scss
+++ b/src/app/pages/faq/faq.scss
@@ -23,6 +23,12 @@
         }
     }
 
+    .faq-list {
+        @extend %text-content;
+
+        padding-top: 4rem;
+    }
+
     .qa {
         margin-bottom: 1em;
 
