--- a/src/app/pages/press/press-mobile/press-mobile.scss
+++ b/src/app/pages/press/press-mobile/press-mobile.scss
@@ -1,7 +1,5 @@
 @import 'pattern-library/core/pattern-library/headers';
 
 .press-mobile {
-    h2 {
-        color: os-color(red);
-    }
+    padding: $normal-margin;
 }
