--- a/src/app/pages/errata/form/form.html
+++ b/src/app/pages/errata/form/form.html
@@ -59,17 +59,17 @@
         <span class="invalid-message">{model.validationMessage('detail')}</span>
         <textarea maxlength="4000" name="detail" skip="true" required></textarea>
         <div class="question">Please add a screenshot or any other file that helps explain the error.</div>
-        <div class="button-row">
+        <div class="button-group">
             <div class="file-button">
                 <label class="btn">
-                    Add file
+                    {model.file1 ? 'Change' : 'Add file'}
                     <input type="file" class="hidden" name="file_1" class="btn" />
                 </label>
                 <span if="model.file1" class="file-name">{model.file1}</span>
             </div>
             <div if="model.file1" class="file-button">
                 <label class="btn">
-                    Add file
+                    {model.file2 ? 'Change' : 'Add file'}
                     <input type="file" class="hidden" name="file_2" class="btn" />
                 </label>
                 <span if="model.file2" class="file-name">{model.file2}</span>
