--- a/src/app/pages/errata/form/form.scss
+++ b/src/app/pages/errata/form/form.scss
@@ -75,11 +75,13 @@
         }
     }
 
-    .button-row {
-        @include tight-row();
+    .button-group {
+        display: grid;
+        grid-gap: 1rem;
     }
 
     .file-button {
+        align-items: center;
         display: flex;
         justify-content: flex-start;
     }
@@ -87,8 +89,8 @@
     .btn {
         @include button();
 
+        min-width: 9em;
         text-indent: inherit;
-        width: 9em;
     }
 
     [type="submit"].btn {
