Adoption form submits

--- a/src/app/components/multi-page-form/multi-page-form.scss
+++ b/src/app/components/multi-page-form/multi-page-form.scss
@@ -24,5 +24,6 @@
         display: grid;
         grid-gap: 1rem;
         grid-template-columns: repeat(9, auto) 1fr;
+        margin-top: 4rem;
     }
 }
