--- a/src/app/components/multi-page-form/multi-page-form.html
+++ b/src/app/components/multi-page-form/multi-page-form.html
@@ -1,19 +1,23 @@
 <template args="model">
-    <div
-     each="c in model.contents"
-     data-page="{$item}"
-     hidden="{model.isHidden($item)}"
-     skip="true"
-     ></div>
-     <div class="button-row">
-         <button type="button" class="secondary back"
-          hidden="{model.hideBack}"
-         >Back</button>
-         <button type="submit" class="primary"
-          hidden="{model.hideSubmit}"
-         >Submit</button>
-         <button type="button" class="primary next"
-          hidden="{model.hideNext}"
-         >Next</button>
-     </div>
+    <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
+    <form accept-charset="UTF-8" class="form" target="form-response"
+     action="{model.action}" method="post">
+        <div
+         each="c in model.contents"
+         data-page="{$item}"
+         hidden="{model.isHidden($item)}"
+         skip="true"
+         ></div>
+         <div class="button-row">
+             <button type="button" class="secondary back"
+              hidden="{model.hideBack}"
+             >Back</button>
+             <button type="submit" class="primary"
+              hidden="{model.hideSubmit}"
+             >Submit</button>
+             <button type="button" class="primary next"
+              hidden="{model.hideNext}"
+             >Next</button>
+         </div>
+     </form>
 </template>
