--- a/src/app/pages/press/press.scss
+++ b/src/app/pages/press/press.scss
@@ -20,8 +20,16 @@
             text-align: left;
 
             @include width-up-to($phone-max) {
-                @include title-font(4.8rem);
+                @include title-font(3.6rem);
             }
+        }
+    }
+
+    h2 {
+        @include width-up-to($phone-max) {
+            @include title-font(2.4rem);
+
+            margin-bottom: 3rem;
         }
     }
 
