--- a/src/app/pages/press/inquiries/inquiries.html
+++ b/src/app/pages/press/inquiries/inquiries.html
@@ -2,7 +2,7 @@
     <div>
         <h2>Press inquiries</h2>
         <div class="contact">
-            <div>{model.pressInquiries.name}</div>
+            <div if="model.pressInquiries.name">{model.pressInquiries.name}</div>
             <div>{model.pressInquiries.phone}</div>
             <div>{model.pressInquiries.email}</div>
         </div>
