--- a/src/app/pages/press/press-excerpt/press-excerpt.html
+++ b/src/app/pages/press/press-excerpt/press-excerpt.html
@@ -4,7 +4,7 @@
         <if condition="model.source">
             <span class="source">{model.source}</span> -
         <else>
-            {model.author}, {model.org} |
+            {model.author} |
         </if>
         {' '}{model.date}
     </div>
