--- a/src/app/pages/press/bookings/booking/booking.scss
+++ b/src/app/pages/press/bookings/booking/booking.scss
@@ -3,11 +3,11 @@
 .booking {
     display: grid;
     grid-gap: $normal-margin;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: 8rem 1fr;
 
     img {
         max-height: 11rem;
-        max-width: 8rem;
+        max-width: 100%;
     }
 
     [data-html="bio"] {
