--- a/src/app/pages/press/bookings/bookings.html
+++ b/src/app/pages/press/bookings/bookings.html
@@ -1,7 +1,7 @@
 <template args="model">
     <div class="heading">
         <h2>{model.headline}</h2>
-        <div>{model.blurb}</div>
+        <div data-html="blurb"></div>
     </div>
     <div data-region="bookings" skip="true"></div>
 </template>
