Hotfix: replace $50 verbiage on survey request

--- a/src/app/components/survey-request/survey-request.html
+++ b/src/app/components/survey-request/survey-request.html
@@ -1,8 +1,9 @@
 <h2>If you have a few more minutes...</h2>
 <div>
     Help us improve! We'd like to know more about how you use textbooks, online
-    resources, and courseware in your classes. If you take 10 minutes to complete
-    the survey below, we'll enter you into a drawing to win $50!
+    resources, and courseware in your classes. If you take the 10-15 minutes to
+    complete our survey below, we'll enter you into our monthly drawing for an
+    Apple Watch.
 </div>
 <div>
     <a
