--- a/src/app/components/book-checkbox/book-checkbox.html
+++ b/src/app/components/book-checkbox/book-checkbox.html
@@ -7,7 +7,12 @@
     >
     <img if="model.imageUrl" src="{model.imageUrl}">
     <label>{model.label}</label>
-    <div class="indicator">
+    <div
+     class="indicator"
+     tabindex="0"
+     role="checkbox"
+     aria-checked="{model.checked}"
+    >
         <span if="model.checked" class="fa fa-check"></span>
     </div>
 </template>
