--- a/src/app/components/multi-page-form/multi-page-form.html
+++ b/src/app/components/multi-page-form/multi-page-form.html
@@ -1,5 +1,5 @@
 <template args="model">
-    <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
+    <iframe name="form-response" id="form-response" src="" width="0" height="0" tabindex="-1"></iframe>
     <form accept-charset="UTF-8" class="form" target="form-response"
      action="{model.action}" method="post">
         <div
