--- a/src/app/components/technology-selector/technology-selector.html
+++ b/src/app/components/technology-selector/technology-selector.html
@@ -2,4 +2,5 @@
     <h2 class="prompt">{model.prompt}</h2>
     <div class="hint">Check all that apply</div>
     <div class="two-columns" data-region="checkboxes" skip="true"></div>
+    <div class="other-option" if="model.showOtherBlank"></div>
 </template>
