--- a/src/app/components/technology-selector/technology-selector.scss
+++ b/src/app/components/technology-selector/technology-selector.scss
@@ -13,5 +13,16 @@
         display: grid;
         grid-gap: 1rem;
         grid-template-columns: 1fr 1fr;
+        margin-bottom: 1rem;
+    }
+
+    .other-option {
+        margin-top: 4rem;
+
+        label {
+            @include set-font(helper-label);
+
+            font-weight: bold;
+        }
     }
 }
