Fix keyboard traps on Details page
Also: Improve tab group accessibility

--- a/src/app/components/dialog/dialog.html
+++ b/src/app/components/dialog/dialog.html
@@ -2,7 +2,9 @@
     <div class="title-bar">
         <span id="dialog-title" class="text-title">{model.title}</span>
         <span if="model.htmlTitle" class="html-title" skip="true"></span>
-        <span class="put-away fa fa-times" role="button"></span>
+        <button class="put-away">
+            <span class="fa fa-times"></span>
+        </button>
     </div>
     <div class="main-region"></div>
 </template>
