--- a/src/app/components/tab-group/tab-group.scss
+++ b/src/app/components/tab-group/tab-group.scss
@@ -6,7 +6,7 @@
     .tab {
         @extend %tab;
 
-        &.selected {
+        &[aria-current] {
             @extend %active;
         }
     }
