Put Press link in footer, replacing Press Kit

--- a/src/app/components/shell/footer/footer.html
+++ b/src/app/components/shell/footer/footer.html
@@ -25,8 +25,8 @@
                 <li>
                     <a href="/contact">Contact Us</a>
                 </li>
-                <li if="model.pressKitData">
-                    <a href="{model.pressKitData.file}">Press Kit</a>
+                <li>
+                    <a href="/press">Press</a>
                 </li>
                 <li>
                     <a href="http://www2.openstax.org/l/218812/2016-10-04/lvk">Newsletter</a>
