Fix formatting screwup on Errata page

--- a/src/app/pages/errata/errata.scss
+++ b/src/app/pages/errata/errata.scss
@@ -85,6 +85,7 @@ $bar-size: 0.2rem;
         }
 
         th {
+            display: table-cell;
             position: relative;
 
             .will-sort {
