Fix spacing below books on Subjects page

--- a/src/app/pages/subjects/subjects.html
+++ b/src/app/pages/subjects/subjects.html
@@ -7,19 +7,21 @@
     </div>
     <div class="books">
         <div class="boxed container" skip="true"></div>
-        <h2 class="text-content">About Our Textbooks</h2>
-        <div class="boxed-row feature-block" if="model.dev_standard_1_heading">
-            <div class="blurb">
-                <h3 class="title">{model.dev_standard_1_heading}</h3>
-                <p class="text" data-html="dev_standard_1_description" skip="true"></p>
-            </div>
-            <div class="blurb">
-                <h3 class="title">{model.dev_standard_2_heading}</h3>
-                <p class="text" data-html="dev_standard_2_description" skip="true"></p>
-            </div>
-            <div class="blurb">
-                <h3 class="title">{model.dev_standard_3_heading}</h3>
-                <p class="text" data-html="dev_standard_3_description" skip="true"></p>
+        <div>
+            <h2 class="text-content">About Our Textbooks</h2>
+            <div class="boxed-row feature-block" if="model.dev_standard_1_heading">
+                <div class="blurb">
+                    <h3 class="title">{model.dev_standard_1_heading}</h3>
+                    <p class="text" data-html="dev_standard_1_description" skip="true"></p>
+                </div>
+                <div class="blurb">
+                    <h3 class="title">{model.dev_standard_2_heading}</h3>
+                    <p class="text" data-html="dev_standard_2_description" skip="true"></p>
+                </div>
+                <div class="blurb">
+                    <h3 class="title">{model.dev_standard_3_heading}</h3>
+                    <p class="text" data-html="dev_standard_3_description" skip="true"></p>
+                </div>
             </div>
         </div>
     </div>
