--- a/src/app/pages/bookstore-suppliers/bookstore-suppliers.scss
+++ b/src/app/pages/bookstore-suppliers/bookstore-suppliers.scss
@@ -160,6 +160,7 @@
         @extend %button;
         @extend %secondary;
 
+        justify-self: center;
         width: fit-content;
 
         &.primary {
