Center text in cards

--- a/src/app/pages/bookstore-suppliers/bookstore-suppliers.scss
+++ b/src/app/pages/bookstore-suppliers/bookstore-suppliers.scss
@@ -258,6 +258,7 @@
                 grid-template-rows: auto auto 1fr auto;
                 justify-items: center;
                 padding: 3rem 2rem;
+                text-align: center;
 
                 .logo-dot {
                     align-items: center;
